Centered image and tagline

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+	<link rel="stylesheet" href="style.css">
+</head>
 <body>
-	<img src="lewagon.jpg" alt="">
+	<div id="container">
+	<img id="logo" src="lewagon.jpg" alt="">
 	<H1>Coming soon... Le Wagon</H1>
+	</div>
 </body>
 </html>
